{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 177,
  "lineage": "c44d2294-958f-84a9-6fae-7482d79df145",
  "resources": [
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce2cb35386fc22e9",
            "arn": "arn:aws:ec2:us-west-1:375860358861:instance/i-0da6f002a1a4b2354",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da6f002a1a4b2354",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bd28b5c2c431300",
            "private_dns": "ip-10-0-1-133.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_ip": "54.183.19.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00fa5a86f99f0eecd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032658047963c931a",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0409f74a41ff00efd"
            ]
          },
          "dependencies": [
            "module.bastionhost.aws_security_group.bastion_sg",
            "module.bastionhost.data.template_file.userdata",
            "module.vpc.aws_subnet.public_luit22_subnet",
            "module.vpc.aws_vpc.luit22",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:security-group/sg-0409f74a41ff00efd",
            "description": "Security group for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0409f74a41ff00efd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "375860358861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion SG"
            },
            "tags_all": {
              "Name": "Bastion SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.luit22"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:security-group/sg-02b68658eb467696a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b68658eb467696a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240110120513652400000006",
            "name_prefix": "node_group_one",
            "owner_id": "375860358861",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.luit22"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_luit22_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:route-table/rtb-034dfa85ab3228316",
            "default_route_table_id": "rtb-034dfa85ab3228316",
            "id": "rtb-034dfa85ab3228316",
            "owner_id": "375860358861",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0515b2835f28a9047",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "luit22"
            },
            "tags_all": {
              "Name": "luit22"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.luit22_gw",
            "module.vpc.aws_vpc.luit22"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "luit22_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:internet-gateway/igw-0515b2835f28a9047",
            "id": "igw-0515b2835f28a9047",
            "owner_id": "375860358861",
            "tags": {
              "Name": "luit22"
            },
            "tags_all": {
              "Name": "luit22"
            },
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "dependencies": [
            "module.vpc.aws_vpc.luit22"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b83b93af0a9bbcf6",
            "route_table_id": "rtb-034dfa85ab3228316",
            "subnet_id": "subnet-032658047963c931a"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_luit22_default",
            "module.vpc.aws_internet_gateway.luit22_gw",
            "module.vpc.aws_subnet.public_luit22_subnet",
            "module.vpc.aws_vpc.luit22",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d3eeaf3c1180c94",
            "route_table_id": "rtb-034dfa85ab3228316",
            "subnet_id": "subnet-072b90817e6c40919"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_luit22_default",
            "module.vpc.aws_internet_gateway.luit22_gw",
            "module.vpc.aws_subnet.public_luit22_subnet",
            "module.vpc.aws_vpc.luit22",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_luit22_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:subnet/subnet-032658047963c931a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032658047963c931a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375860358861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "luit22"
            },
            "tags_all": {
              "Name": "luit22"
            },
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "dependencies": [
            "module.vpc.aws_vpc.luit22",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:subnet/subnet-072b90817e6c40919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072b90817e6c40919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375860358861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "luit22"
            },
            "tags_all": {
              "Name": "luit22"
            },
            "vpc_id": "vpc-0d181563e0f5eb734"
          },
          "dependencies": [
            "module.vpc.aws_vpc.luit22",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "luit22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:375860358861:vpc/vpc-0d181563e0f5eb734",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e73c64f6f01de62",
            "default_route_table_id": "rtb-034dfa85ab3228316",
            "default_security_group_id": "sg-0599d5e3f5e4891e7",
            "dhcp_options_id": "dopt-0c38ad7bc92d16900",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d181563e0f5eb734",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034dfa85ab3228316",
            "owner_id": "375860358861",
            "tags": {
              "Name": "luit22"
            },
            "tags_all": {
              "Name": "luit22"
            }
          }
        }
      ]
    }
  ]
}